fix footer on mobile

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -30,8 +30,7 @@
   padding-right: 10px;
 }
 
-/* iPhone 5/SE */
-@media (max-width: 320px) {
+@media (max-width: 767px) {
   .Footer-contacts {
     display: flex;
     flex-direction: column;
